Inicio no funciona. Excepcion

--- a/Comidas/.settings/org.eclipse.wst.common.component
+++ b/Comidas/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,9 @@
     <wb-module deploy-name="Comidas">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <dependent-module archiveName="mysql-connector-java-5.1.39-bin.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/Comidas/WebContent/importar/mysql-connector-java-5.1.39-bin.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="Comidas"/>
         <property name="java-output-path" value="/Comidas/build/classes"/>
     </wb-module>
